Corretti refusi in MC, PP e prima parte renewals

--- a/network_modeling/chapter_PP.tex
+++ b/network_modeling/chapter_PP.tex
@@ -16,7 +16,7 @@ A Poisson process of intensity, or rate, $\lambda > 0$ is an integer-valued stoc
 			\prob[X_n \ge 2] &= o(n)
 		\end{split}
 	\end{equation}
-	\gls{kt} at page 226 shows that assuming \eqref{p_dfist} you can get \eqref{p_dist_conseq} and viceversa.
+	\gls{kt} at page 226 shows that assuming \eq{p_dfist} you can get \eq{p_dist_conseq} and viceversa.
 \end{enumerate}
 \begin{theorem}[Exponential times in Poisson arrivals]
 Interarrival times in a \gls{pp} are iid exponentials with parameter $\lambda$
@@ -40,10 +40,10 @@ Interarrival times in a \gls{pp} are iid exponentials with parameter $\lambda$
 	\prob[S_1 > t | S_0 = s] = \prob[\text{No arrivals in } [s, s+t]] = \prob[S_1 > t] = e^{-\lambda t}
 \end{equation}
 
-Where \eqref{poiss_independence} is possible because $S_0$ and $S_1$ are disjoint and so the condition on $S_0$ is independent on the $S_1$ slot.
+Where \eq{poiss_independence} is possible because $S_0$ and $S_1$ are disjoint and so the condition on $S_0$ is independent on the $S_1$ slot.
 In general,
 \begin{equation}
-	\prob[S_n > t | S_i = s_i, ~i=0,\dots,n-1] = e^{-\lambda t}
+	\prob[S_n > t | S_i = s_i, ~i=0,s,n-1] = e^{-\lambda t}
 \end{equation}
 \end{proof}
 
@@ -52,7 +52,7 @@ In general,
 \section{Properties}
 
 \begin{itemize}
-	\item Consider the sum of two independent Poisson process with parameters $\lambda_1$ and $\lambda_2$, what is the outgoing process?
+	\item Consider the sum of two independent Poisson processes with parameters $\lambda_1$ and $\lambda_2$, what is the outgoing process?
 		 \begin{figure}[H]
 			\centering
 			\begin{tikzpicture}
@@ -120,8 +120,8 @@ In general,
 Defining
 \begin{itemize}
 	\item $X(t)$ as the number of arrivals up to time t;
-	\item $W_n$ the instant of $n^{th}$ arrival;
-	\item $S_n$= $W_{n+1} - W_n$ the inter-arrival time between $(n+1)^{th}$ and $n^{th}$ arrival; %people uses (n+1)th and (n+1)st. no form is more correct than the other
+	\item $W_n$ the instant of $n_{th}$ arrival;
+	\item $S_n$= $W_{n+1} - W_n$ the inter-arrival time between $(n+1)_{th}$ and $n_{th}$ arrival;
 \end{itemize}
 
 \begin{theorem}[5.4, 	\textbf{$W_n ~ \sim$ Gamma Distribution} ]
@@ -132,12 +132,11 @@ Defining
 	\end{equation}
 \end{theorem}
 
-\begin{theorem}[5.7, Joint probability of {$[W_{1},\dots,W_{n}]$}]
-	Being $W_{1}$,$W_{2}$,..$W_{n}$ the arrival time in a Poisson Process $N(t)$ with rate ${\lambda}>0$. Given $N(t)=n$, the joint distribution of $w_{1},w_{2}\dots,w_{n}$ variables is:
+\begin{theorem}[5.7, Joint probability of [$W_{1}$,..$W_{n}$]]
+	Being $W_{1}$,$W_{2}$,..$W_{n}$ the arrival time in a Poisson Process $N(t)$ with rate ${\lambda}>0$. Given $N(t)=n$, the joint distribution of $w_{1}$,$w_{2}$,..$w_{n}$ variables is:
 	\begin{equation}
-	f_{W_1,W_2,..W_n|n} (w_1,w_2,..w_n) = P (W_1=w_1,...W_n=w_n|N(t)=n) = \frac{n!}{t^n}
+	f_{W_1,W_2,..W_n|n} (w_1,w_2,..w_n) = P (W_1=w_1,...W_n=w_n|N(t)=n) = n!/t^n
 	\end{equation}
-	where we supposed that $0<w_1<\dots<w_n<t$, otherwise the function is zero.
 	\begin{proof}
 		Excluding simultaneous arrivals,
 		\begin{equation*}
@@ -156,7 +155,7 @@ Defining
 			\end{cases}
 		\end{equation*}
 
-		Computing the probability of these two disjoint events, we obtain
+		Compute the probability of these two disjoint events.
 		\begin{equation}
 			\begin{split}
 				& P[N((0,w_1])=0,...,N((w_n+\Delta w_n,t])=0] = \\
@@ -185,7 +184,7 @@ Defining
 
 		Dividing both members for ($\Delta w_1 \Delta w_2 .. \Delta w_n$) we obtain the distribution of an uniform random variable.
 		\begin{equation}
-			f_{W_1,W_2,..W_n|n} (w_1,w_2,..w_n) =\frac{n!}{t^n}
+			f_{W_1,W_2,..W_n|n} (w_1,w_2,..w_n) =n!/t^n
 		\end{equation}
 	\end{proof}
 \end{theorem}
@@ -200,7 +199,7 @@ Defining
 \begin{theorem}[5.6, Conditioned Arrivals]
 	(Enunciate given in an intuitive but not so formal way)
 
-	Being $X(t)$ a Poisson Process with $\lambda>0$, $u$ and $t$ two temporal variables such that $0<u<t$, $n$ and $k$ two variables which describes the number of arrivals such that $0\leq k\leq n$ . The probability of the event ``up to instant $u$, $k$ arrivals have been occurred conditioned by the fact that $n$ arrivals occurs up to time $t$'' is described by a binomial distribution with $n$ attempts and $u/t$ success probability.
+	Being $X(t)$ a Poisson Process with $\lambda>0$, $u$ and $t$ two temporal variables such that $0<u<t$, $n$ and $k$ two variables which describe the number of arrivals such that $0\leq k\leq n$ . The probability of the event "up to instant $u$, $k$ arrivals occurred conditioned by the fact that $n$ arrivals occurs up to time $t$" is described by a binomial distribution with $n$ attempts and $u/t$ success probability.
 
 	Formally
 	\begin{equation}
@@ -212,13 +211,6 @@ Defining
 	It is a direct consequence of Theorem 5.7.
 	Being $X(t)=n$, the position of each arrival along interval $t$ can be modeled as i.i.d. uniform random variable. This corresponds to the realization of n experiments with $p_{succ}=u/t$ thus the conditioned probability can be modeled as binomial $Bin(n,\frac{u}{t})$.
 \end{proof}
-
-We will now show the theorem for the case where we have $X_1(t)\sim Poi(\lambda_1)$ and $X_2(t)\sim Poi(\lambda_2)$
-\begin{esp}
-	\prob[X_1(t)=k |X_1(t)+X_2(t)=n] &= \frac{\prob[X_1(t)=k |X_1(t)=k,X_2(t)=n-k]}{\prob[X_1(t)+X_2(t)=n]}\\
-	&= \frac{e^{-\lambda_1 \cdot t}\cdot \frac{(\lambda_1 t)^k}{k!}\cdot e^{-\lambda_2 \cdot t}\cdot \frac{(\lambda_2 t)^{n-k}}{(n-k)!}}{e^{-(\lambda_1 +\lambda_2) \cdot t}\cdot \frac{\left[(\lambda_1 +\lambda_2) t\right]^{n}}{n!}} \\
-	&= \frac{n!}{(n-k)| \cdot k!} \cdot \left(\frac{\lambda_1}{\lambda_1+\lambda_2}\right)^{k}\cdot \left(\frac{\lambda_2}{\lambda_1+\lambda_2}\right)^{n-k}
-\end{esp}
 
 \section{M/G/$\infty$}
 
@@ -256,10 +248,10 @@ Where $p = \prob[U_k + Y_k \geq t]$, we have to compute this probability.
 Now we can compute
 \begin{equation}
 	\begin{split}
-		\prob[M(t)=m] &= \sum\limits_{n=0}^{+\infty} \prob[M(t)=m|X(t)=n]\prob[X(t)=n] \\
-		&= \sum\limits_{n=m}^{+\infty} \frac{n!}{m!(n-m)!}p^m(1-p)^{n-m}\frac{e^{-\lambda t} (\lambda t)^n}{n!} \\
-		&= \frac{e^{-\lambda t} (\lambda p t)^m}{m!}\sum\limits_{n=m}^{+\infty} \frac{(1-p)^{n-m}(\lambda t)^{n-m}}{(n-m)!}\\
-		&= \frac{e^{-\lambda t} (\lambda p t)^m}{m!} e^{-\lambda(1-p)t}\\
+		\prob[M(t)=m] &= \sum\limits_{n=0}^{\infty} \prob[M(t)=m|X(t)=n]\prob[X(t)=n] \\
+		&= \sum\limits_{n=m}^{\infty} \frac{n!}{m!(n-m)!}p^m(1-p)^{n-m}\frac{e^{-\lambda t} (\lambda t)^n}{n!} \\
+		&= \frac{e^{-\lambda t} (\lambda p t)^m}{m!}\sum\limits_{n=m}^{\infty} \frac{(1-p)^{n-m}(\lambda t)^{n-m}}{(n-m)!}\\
+		&= \frac{e^{-\lambda t} (\lambda p t)^m}{m!} e^{\lambda(1-p)t}\\
 		&= \frac{e^{-\lambda p t}(\lambda p t)^m}{m!}
 	\end{split}
 \end{equation}
@@ -311,7 +303,7 @@ Now suppose to consider the interval $d\tau$, we have
 If the user transmits only at the end of the (universal) time: Slotted ALOHA.
 With SA the vulnerability interval becomes T=1. $\implies S_{max}=\frac{1}{e} \approx 37\% \quad G_{max} = 1$.
 
-Actually, this analysis can not be completely correct, since we suppose G as fixed in order to find a working point. In a real system, G cannot be fixed. In the follows we propose an approach to take in account this problem.
+Actually, this analysis can not be completely correct, since we suppose G as fixed in order to find a working point. In a real system, G cannot be fixed. In what follows we propose an approach to take in account this problem.
 
 \subsubsection{Correct approach}
 
@@ -320,7 +312,7 @@ Suppose $m$ users.
 Let the state of the system be n, which considers the number of backlogged users.
 The traffic per user is $\frac{\lambda}{m}$ and let the probability that a backlogged user transmits in a slot be $q_r$. Suppose the retransmission probability density function be a geometric, then a non-backlogged user transmits with probability $q_a = 1-e^{-\frac{\lambda}{m}}$.
 
-As the arrival are Poissonian and the retransmission are memoryless, we can study this case with \gls{mc}.
+As the arrivals are Poissonian and the retransmissions are memoryless, we can study this case with \gls{mc}.
 
 \begin{equation}\begin{split}
 	Q_a(i,n) &= \prob[\text{i new arrivals per TX | state n}] = \binom{m-n}{i} q_a^i (1-q_a)^{m-n-i} \\
@@ -415,7 +407,7 @@ Then the \gls{mc} is unstable (i.e. non-positive recurrent)
 \begin{figure}
 	\centering
 	\input{img/KaplansPlot.tex}
-	\caption{In the orange region, the function is unstable, in according to the Kaplan's Lemma.}
+	\caption{In the orange region, the function is unstable, according to the Kaplan's Lemma.}
 	\label{fig:kaplan}
 \end{figure}
 
@@ -453,7 +445,7 @@ State transitions take $\begin{cases}
 	\caption{The new system, in red, perform always better than Aloha, in blue}
 	\label{}
 \end{figure}
-If two transmissions occours at the same tume, but the nodes transmitting are far enough, they won't hear each other and packets will collide.
+If two transmissions occour at the same time, but the nodes transmitting are far enough, they won't hear each other and packets will collide.
 
 \begin{table}[h!]
 	\centering
@@ -469,7 +461,7 @@ If two transmissions occours at the same tume, but the nodes transmitting are fa
 $D_n \lessgtr 0 $ if $\lambda \lessgtr \frac{g(n) e^{-g(n)}}{\beta + 1 - e^{-g(n)}}$\\
 We know that instability will occour eventually, but the time for it to happen is really long.
 
-\subsection{Recurrent \gls{mc} behaviour}
+\subsection{Recurrent \gls{mc} behavior}
 Suppose a recurrent \gls{mc} like the one in figure \ref{fig:recurrMC}, we can study a system which has a transient state and two states, 0 and 1,
 that may be recurrent.
 \begin{figure}[h!]\centering
@@ -496,7 +488,7 @@ that may be recurrent.
 	\end{pmatrix}\\
 \end{split}\end{equation}
 
-We than have that
+We then have that
 
 \begin{equation}\begin{split}
 	P^2&=\begin{pmatrix}
